--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Deep Into The Sea">
+        <meta name="description" content="Deep Into The Space">
         <meta name="author" content="Theodorus">
         <title>$htmltitle$</title>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=http://chaoxuprime.com/mathjax_conf.js">
@@ -18,7 +18,7 @@
     <body class="tex2jax_ignore">
       <header class="hide-on-print">
           <div id="blog-title">
-              <a href="/">Deep Into The Sea</a>
+              <a href="/">Deep Into The Space</a>
           </div>
           <nav>
               <ul>
@@ -31,7 +31,9 @@
       </header>
       <article>
           <h1 id="article-title">$title$</h1>
+          <div>
           $body$
+          </div>
           <div class="info">Posted by Theodorus Zhou on $date$. </div>
       </article>
       <footer class="hide-on-print">© 2010 - <script>document.write(new Date().getFullYear())</script> Theodorus Zhou. Licensed under <a href="http://www.wtfpl.net/txt/copying/">WTFPL v2</a> unless otherwise specified. <a href="/README.html">Blog README</a>.</footer>
